# ucsocallove

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Character.cpp  Makefile  README.md  UCR.cpp  ValgrindInput.txt  _test  cmake_install.cmake  main  main.cpp
header/: Character.h  Game.h  SlowTyping.h  UCI.h  UCLA.h  UCR.h  UCSB.h  UCSD.h
src/: Character.cpp  Game.cpp  SlowTyping.cpp  UCI.cpp  UCLA.cpp  UCR.cpp  UCSB.cpp  UCSD.cpp  a.out  main.cpp
tests/: GameTest.cpp  SlowTypingTest.cpp  UCITest.cpp  UCLAtest.cpp  UCRTest.cpp  UCSBTest.cpp  UCSDtest.cpp
